--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -31,6 +31,6 @@ jobs:
         tags: 1
         registry: docker.io
         dockerfile: dockerfile
-        username: ${{secrets..DOCKER_USERNAME}}
+        username: ${{secrets.DOCKER_USERNAME}}
         password: ${{ secrets.DOCKER_PASSWORD }}
         
