--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -26,7 +26,7 @@ jobs:
       uses: mr-smithers-excellent/docker-build-push@v6.4
       with:
         image: matheusfmelo/java_sem_maven
-        tags: 1
+        #tags: 1
         registry: docker.io
         dockerfile: dockerfile
         username: ${{secrets.DOCKER_USERNAME}}
