--- a/.github/workflows/ant.yml
+++ b/.github/workflows/ant.yml
@@ -32,14 +32,20 @@ jobs:
         username: ${{secrets.DOCKER_USERNAME}}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Git Version
+
+#Usando o Git version
+    #- name: Git Version
   # You may pin to the exact commit or the version.
   # uses: codacy/git-version@fa06788276d7492a2af01662649696d249ecf4cb
-      uses: codacy/git-version@2.4.0
-      with:
+     # uses: codacy/git-version@2.4.0
+     # with:
     # The name of the release branch
-        release-branch: main
+      #  release-branch: main
     # The name of the dev branch
-        dev-branch: main
-    
-          
+      #  dev-branch: main
+
+    #Usando o github.run_number
+    - name: Build and push Docker image
+      run: |
+        docker build -t matheusfmelo/java_sem_maven:${{ github.run_number }} .
+        docker push matheusfmelo/java_sem_maven:${{ github.run_number }}
